refactor: Pair 생성자에서 방어적 복사